@@ -31,12 +31,17 @@ public class RobotService {
     private final StoreRepository storeRepository;
     private final ObjectMapper mapper = new ObjectMapper();
 
-    // 특정 매장의 로봇 동기화
+    /**
+     * 특정 매장의 로봇을 Pudu API에서 조회하여 DB에 저장/업데이트
+     * @param req 매장 ID 포함 요청 정보
+     * @return 저장된 로봇 개수
+     */
     @Transactional
     public int syncRobots(RobotSyncRequestDTO req) {
 
         Store store = storeRepository.findById(req.getStoreId())
                 .orElseThrow(() -> new IllegalArgumentException("Store not found"));
+
         Long shopId = store.getShopId();
 
         List<RobotDTO> robots = getRobotListByShop(shopId);
@@ -57,11 +62,11 @@ public class RobotService {
         return newCount;
     }
 
-    // 모든 매장의 로봇 동기화
+    /**
+     * DB에 저장된 모든 매장의 로봇을 Pudu API에서 조회하여 동기화
+     * 관리자가 전체 매장의 로봇 정보를 한 번에 업데이트할 때 사용
+     */
     @Transactional
-    public int syncAllStoresRobots() {
-
-        List<Store> stores = storeRepository.findAll();
 
         System.out.println("\n===== Sync All Stores Robots =====");
         System.out.println("Total Stores: " + stores.size());
@@ -90,21 +95,53 @@ public class RobotService {
         return newTotal;
     }
 
-
-    // 매장별 로봇 목록 조회
+    /**
+     * DB에서 특정 매장의 로봇 목록을 조회
+     * @param storeId 매장 ID
+     * @return 해당 매장에 속한 로봇 목록
+     */
     public List<RobotDTO> getRobotListFromDB(Long storeId) {
 
-        if (storeId != null) {
-            List<Robot> robotList = robotRepository.findAllByStore_StoreId(storeId);
-
-            return robotList.stream().map(this::convertToDto).toList();
-        }else {
-            return robotRepository.findAll().stream().map(this::convertToDto).toList();
-        }
+        return robotRepository.findAllByStore_StoreId(storeId)
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
+    /**
+     * DB의 로봇 정보와 API의 최신 상태 정보를 병합하여 조회
+     * @param sn 로봇 시리얼 번호
+     * @param storeId 매장 ID
+     * @return 병합된 로봇 정보
+     */
+    public RobotDTO getRobotInfoByStoreId(String sn, Long storeId) {
 
-    // 로봇 정보 저장/업데이트
+        Store store = storeRepository.findById(storeId)
+                .orElseThrow(() -> new IllegalArgumentException("Store not found"));
+
+        Long shopId = store.getShopId();
+
+        RobotDTO api = getRobotInfo(sn, shopId);
+        Robot robot = robotRepository.findBySn(sn).orElse(null);
+        if (robot == null) return api;
+
+        RobotDTO dto = convertToDto(robot);
+
+        dto.setBattery(api.getBattery());
+        dto.setOnline(api.getOnline());
+        dto.setStatus(api.getStatus());
+        dto.setProductCode(api.getProductCode());
+        dto.setSoftVersion(api.getSoftVersion());
+
+        return dto;
+    }
+
+    /**
+     * 로봇 정보를 DB에 저장 또는 업데이트
+     * @param dto 저장할 로봇 정보
+     * @param store 로봇이 속한 매장
+     * @return 저장된 로봇 엔티티
+     */
     @Transactional
     public Robot saveRobot(RobotDTO dto, Store store) {
         Robot robot = robotRepository.findBySn(dto.getSn())
@@ -124,7 +161,12 @@ public class RobotService {
         return robotRepository.save(robot);
     }
 
-
+    /**
+     * Pudu API에서 로봇의 모든 정보를 조회하여 DTO로 변환
+     * @param sn 로봇 시리얼 번호
+     * @param shopId 샵 ID
+     * @return 조회된 로봇 정보
+     */
     public RobotDTO getRobotInfo(String sn, Long shopId) {
         String mac = null;
         String nickname = null;
@@ -167,7 +209,11 @@ public class RobotService {
                 .build();
     }
 
-
+    /**
+     * 샵에 속한 모든 로봇 목록을 Pudu API에서 조회
+     * @param shopId 샵 ID
+     * @return 로봇 정보 리스트
+     */
     public List<RobotDTO> getRobotListByShop(Long shopId) {
         List<JsonNode> list = fetchRobotListAll(shopId);
         List<RobotDTO> result = new ArrayList<>();
@@ -180,8 +226,13 @@ public class RobotService {
         return result;
     }
 
-
+    /**
+     * Pudu API에서 샵의 모든 로봇 목록 조회 (기본 정보)
+     * @param shopId 샵 ID
+     * @return 로봇 JSON 노드 리스트
+     */
     private List<JsonNode> fetchRobotListAll(Long shopId) {
+
         List<JsonNode> list = new ArrayList<>();
 
         try {
@@ -265,19 +316,22 @@ public class RobotService {
         return null;
     }
 
-
-
-
-
-    // 시리얼 번호로 로봇 조회
+    /**
+     * DB에서 시리얼 번호로 로봇 조회
+     * @param sn 로봇 시리얼 번호
+     * @return 로봇 정보 DTO
+     */
     public RobotDTO getRobotBySn(String sn) {
         return robotRepository.findBySn(sn)
                 .map(this::convertToDto)
                 .orElseThrow(() -> new IllegalArgumentException("Robot not found"));
     }
 
-
-
+    /**
+     * 로봇 엔티티를 DTO로 변환
+     * @param robot 로봇 엔티티
+     * @return 변환된 로봇 DTO
+     */
     private RobotDTO convertToDto(Robot robot) {
         return RobotDTO.builder()
                 .robotId(robot.getRobotId())
